# map_changer

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: test.yaml  test1.yaml  test2.yaml  tsudanuma.yaml
include/map_changer/: map_changer_node.h
launch/: map_changer.launch
map/: tsudanuma2-18.pgm  tsudanuma2-18.yaml  tsudanuma2-3.pgm  tsudanuma2-3.yaml
src/: map_changer_node.cpp
waypoint_config/routes/: tsudanuma_mapchanger.yaml
waypoint_config/waypoints/: tsudanuma_mapchanger.yaml
